# dotfiles

./: .bashrc  .blerc  .inputrc  .xinitrc  .zimrc  .zprofile  .zshrc
.config/: main.code-profile
.config/alacritty/: alacritty.toml  alacritty.yml
.config/betterlockscreen/: betterlockscreenrc
.config/bspwm/: bspwmrc  monitor.sh  switch_monitor
.config/dunst/: dunstrc
.config/eww/: eww.scss  eww.yuck
.config/eww/settings/: eww.scss  eww.yuck
.config/eww/settings/scripts/: launch_app
.config/eww/styles/: battery.scss  calendar.scss  control-bar.scss  datetime.scss  long-switcher.scss  monitor.scss  palette.scss  power-menu.scss
.config/eww/widgets/: airplane.yuck  backlight.yuck  battery.yuck  bluetooth.yuck  cpu.yuck  datetime.yuck  dnd.yuck  power-menu.yuck  power-saver.yuck  volume.yuck  wifi.yuck
.config/fontconfig/conf.d/: 99-alias-fonts.conf
.config/joshuto/: joshuto.toml  keymap.toml  mimetype.toml
.config/meow/templates/: CMakeLists.txt
.config/picom/: picom.conf
.config/polybar/: config.ini  gylphs.ini  launch.sh  modules.ini
.config/polybar/scripts/: bluetooth  bluetooth_switch  wifi_switch
.config/rofi/: catppuccin-frappe.rasi  config.rasi  launcher.rasi
.config/scripts/: .editorconfig  airplane  backlight  battery.sh  bluetooth  convert_bases.sh  convert_catppuccin_palette  dnd  prompt.sh  show_scripts_in_rofi.sh  toggle_monitor.sh  volume  wifi
.config/shortcuts/: bspwm.toml
.config/sxhkd/: sxhkdrc
.config/tmux/: tmux.conf
.config/yazi/: init.lua  keymap.toml  package.toml  theme.toml  yazi.toml
(+9 files in other folders)
